--- a/class-code/views/create.ejs
+++ b/class-code/views/create.ejs
@@ -6,10 +6,22 @@
     <title>Document</title>
 </head>
 <body>
+
+    <!-- 
+    {
+        name: "Apple",
+        isReadyToEat: true
+    }
+     -->
     
     <h1>Create Fruit Page</h1>
-    <form action="https://www.google.com/" method="get">
+    <form action="/fruits/create" method="post">
 
+        <label for="fruit-name">Fruit Name:</label>
+        <input id="fruit-name" type="email">
+
+        <label for="">Is Ready To Eat?</label>
+        <input type="text">
 
         <button type="submit">Submit</button>
     </form>
