--- a/class-code/views/create.ejs
+++ b/class-code/views/create.ejs
@@ -17,11 +17,11 @@
     <h1>Create Fruit Page</h1>
     <form action="/fruits/create" method="post">
 
-        <label for="fruit-name">Fruit Name:</label>
-        <input id="fruit-name" type="email">
+        <label for="fruitName">Fruit Name:</label>
+        <input id="fruitName" type="text" required minlength="10">
 
-        <label for="">Is Ready To Eat?</label>
-        <input type="text">
+        <label for="isReadyToEat">Is Ready To Eat?</label>
+        <input id="isReadyToEat" type="text">
 
         <button type="submit">Submit</button>
     </form>
