--- a/class-code/views/create.ejs
+++ b/class-code/views/create.ejs
@@ -18,10 +18,10 @@
     <form action="/fruits/create" method="post">
 
         <label for="fruitName">Fruit Name:</label>
-        <input id="fruitName" type="text" required minlength="10">
+        <input name="fruitName" id="fruitName" type="text" required minlength="3">
 
         <label for="isReadyToEat">Is Ready To Eat?</label>
-        <input id="isReadyToEat" type="text">
+        <input name="isReadyToEat" id="isReadyToEat" type="text">
 
         <button type="submit">Submit</button>
     </form>
