--- a/class-code/views/create.ejs
+++ b/class-code/views/create.ejs
@@ -21,7 +21,7 @@
         <input name="fruitName" id="fruitName" type="text" required minlength="3">
 
         <label for="isReadyToEat">Is Ready To Eat?</label>
-        <input name="isReadyToEat" id="isReadyToEat" type="text">
+        <input name="isReadyToEat" id="isReadyToEat" type="checkbox">
 
         <button type="submit">Submit</button>
     </form>
