--- a/class-code/views/create.ejs
+++ b/class-code/views/create.ejs
@@ -18,7 +18,7 @@
     <form action="/fruits/create" method="post">
 
         <label for="fruitName">Fruit Name:</label>
-        <input name="fruitName" id="fruitName" type="text" required minlength="3">
+        <input name="name" id="fruitName" type="text" required minlength="3">
 
         <label for="isReadyToEat">Is Ready To Eat?</label>
         <input name="isReadyToEat" id="isReadyToEat" type="checkbox">
