--- a/class-code/views/fruit-details.ejs
+++ b/class-code/views/fruit-details.ejs
@@ -6,13 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-
-    <h1>All Fruits</h1>
-
-    <% allFruits.forEach((oneFruit)=>{ %>
-        <p>Name: <%= oneFruit.name %></p>
-        <a href="/fruits/<%=oneFruit._id%>">See fruit details</a>
-    <% }) %>
-    
+    <h1>Fruit Details</h1>
 </body>
 </html>
