--- a/class-code/views/fruit-update.ejs
+++ b/class-code/views/fruit-update.ejs
@@ -13,7 +13,7 @@
         <input type="text" name="name" id="name">
 
         <label for="isReadyToEat">Is Ready To Eat</label>
-        <input type="text" name="isReadyToEat" id="isReadyToEat">
+        <input type="checkbox" name="isReadyToEat" id="isReadyToEat">
 
         <button type="submit">Update</button>
     </form>
