--- a/class-code/views/fruit-update.ejs
+++ b/class-code/views/fruit-update.ejs
@@ -10,10 +10,10 @@
 
     <form action="" method="">
         <label for="name">Name:</label>
-        <input type="text" name="name" id="name">
+        <input value="<%= foundFruit.name %>" type="text" name="name" id="name">
 
         <label for="isReadyToEat">Is Ready To Eat</label>
-        <input type="checkbox" name="isReadyToEat" id="isReadyToEat">
+        <input <% if(foundFruit.isReadyToEat){ %> checked<% }%> type="checkbox" name="isReadyToEat" id="isReadyToEat">
 
         <button type="submit">Update</button>
     </form>
