--- a/class-code/views/fruit-update.ejs
+++ b/class-code/views/fruit-update.ejs
@@ -8,7 +8,7 @@
 <body>
     <h1>Update Fruit</h1>
 
-    <form action="" method="">
+    <form action="/fruits/update/<%= foundFruit._id %>?_method=PUT" method="post">
         <label for="name">Name:</label>
         <input value="<%= foundFruit.name %>" type="text" name="name" id="name">
 
