--- a/class-code/views/fruit-details.ejs
+++ b/class-code/views/fruit-details.ejs
@@ -16,7 +16,7 @@
     <p>Fruit is not ready to eat</p>
    <%}%>
 
-      <form action="/fruits/delete/<%=foundFruit._id%>?_method=DELETE" method="post">
+      <form action="/fruits/<%=foundFruit._id%>?_method=DELETE" method="post">
     <button type="submit">Delete Fruit</button>
 
    </form>
